src/main/java/com/example/alcdiary/domain/exception/error/CommonError.java
package com.example.alcdiary.domain.exception.error;

import com.example.alcdiary.domain.exception.ErrorModel;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public enum CommonError implements ErrorModel {

    INVALID_PARAMETER("Invalid parameter include");

    private final String message;
}
